[package]
authors = ["Erin Power <xampprocky@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities", "development-tools", "visualization"]
description = "Count your code, quickly."
edition = "2018"
homepage = "https://tokei.rs"
include = [
  "Cargo.lock",
  "Cargo.toml",
  "LICENCE-APACHE",
  "LICENCE-MIT",
  "build.rs",
  "languages.json",
  "src/**/*",
]
keywords = ["utility", "cli", "cloc", "lines", "statistics"]
license = "MIT/Apache-2.0"
name = "tokei"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/tokei.git"
version = "13.0.0-alpha.0"

[features]
all = ["cbor", "yaml"]
cbor = ["hex", "serde_cbor"]
default = []
yaml = ["serde_yaml"]

[profile.release]
lto = "thin"
panic = "abort"

[build-dependencies]
tera = "1.15"
ignore = "0.4"
serde_json = "1"
json5 = "0.4"

[dependencies]
aho-corasick = "0.7"
arbitrary = { version = "1", features = ["derive"] }
clap = { version = "3", features = ["cargo", "wrap_help"] }
colored = "2"
crossbeam-channel = "0.5"
encoding_rs_io = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
log = "0.4"
rayon = "1.5.0"
serde = { version = "1.0.128", features = ["derive", "rc"] }
term_size = "0.3"
toml = "0.5"
parking_lot = "0.12"
dashmap = { version = "5.0.0", features = ["serde"] }
num-format = "0.4.0"
once_cell = "1.9"
regex = "1.5"
serde_json = "1"
etcetera = "0.8"
table_formatter = "0.5.0"

[dependencies.env_logger]
features = []
version = "0.9"

[dependencies.hex]
optional = true
version = "0.4"

[dependencies.serde_cbor]
optional = true
version = "0.11.2"

[dependencies.serde_yaml]
optional = true
version = "0.9"

[dev-dependencies]
proptest = "1"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.2"
git2 = { version = "0.15", default-features = false, features = [] }
