[package]
authors = ["Erin Power <xampprocky@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities", "development-tools", "visualization"]
description = "Count your code, quickly."
edition = "2018"
homepage = "https://tokei.rs"
include = [
  "Cargo.lock",
  "Cargo.toml",
  "LICENCE-APACHE",
  "LICENCE-MIT",
  "build.rs",
  "languages.json",
  "src/**/*",
]
keywords = ["utility", "cli", "cloc", "lines", "statistics"]
license = "MIT/Apache-2.0"
name = "tokei"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/tokei.git"
version = "13.0.0-alpha.2"

[features]
all = ["cbor", "yaml"]
cbor = ["hex", "serde_cbor"]
default = []
yaml = ["serde_yaml"]

[profile.release]
lto = "thin"
panic = "abort"

[build-dependencies]
tera = "1.19.0"
ignore = "0.4.20"
serde_json = "1.0.104"
json5 = "0.4.1"

[dependencies]
aho-corasick = "1.0.2"
arbitrary = { version = "1.3.0", features = ["derive"] }
clap = { version = "3", features = ["cargo", "wrap_help"] }
colored = "2.0.4"
crossbeam-channel = "0.5.8"
encoding_rs_io = "0.1.7"
grep-searcher = "0.1.11"
ignore = "0.4.20"
log = "0.4.19"
rayon = "1.7.0"
serde = { version = "1.0.180", features = ["derive", "rc"] }
term_size = "0.3.2"
toml = "0.7.6"
parking_lot = "0.12.1"
dashmap = { version = "5.5.0", features = ["serde"] }
num-format = "0.4.4"
once_cell = "1.18.0"
regex = "1.9.1"
serde_json = "1.0.104"
etcetera = "0.8.0"
table_formatter = "0.6.1"

[dependencies.env_logger]
features = []
version = "0.10.0"

[dependencies.hex]
optional = true
version = "0.4.3"

[dependencies.serde_cbor]
optional = true
version = "0.11.2"

[dependencies.serde_yaml]
optional = true
version = "0.9.25"

[dev-dependencies]
proptest = "1.2.0"
strum = "0.25.0"
strum_macros = "0.25.1"
tempfile = "3.7.0"
git2 = { version = "0.17.2", default-features = false, features = [] }
