[package]
authors = ["Erin Power <xampprocky@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities", "development-tools", "visualization"]
description = "Count your code, quickly."
homepage = "https://tokei.rs"
include = [
  "Cargo.lock",
  "Cargo.toml",
  "LICENCE-APACHE",
  "LICENCE-MIT",
  "build.rs",
  "languages.json",
  "src/**/*",
]
keywords = ["utility", "cli", "cloc", "lines", "statistics"]
license = "MIT OR Apache-2.0"
name = "tokei"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/tokei.git"
version = "14.0.0"
rust-version = "1.71"
edition = "2021"

[features]
all = ["cbor", "yaml"]
cbor = ["dep:hex", "dep:serde_cbor"]
cli = ["dep:clap", "dep:colored", "dep:env_logger", "dep:num-format"]
default = ["cli"]
yaml = ["dep:serde_yaml"]

[profile.release]
lto = "thin"
panic = "abort"

[[bin]]
name = "tokei"
required-features = ["cli"]

[build-dependencies]
tera = "1.20.0"
ignore = "0.4.22"
serde_json = "1.0.125"
json5 = "0.4.1"

[dependencies]
aho-corasick = "1.1.3"
arbitrary = { version = "1.3.2", features = ["derive"] }
clap = { version = "4", optional = true, features = ["cargo", "string", "wrap_help"] }
colored = { version = "2.1.0", optional = true }
crossbeam-channel = "0.5.13"
encoding_rs_io = "0.1.7"
grep-searcher = "0.1.13"
ignore = "0.4.22"
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive", "rc"] }
term_size = "0.3.2"
toml = "0.8.19"
parking_lot = "0.12.3"
dashmap = { version = "6.0.1", features = ["serde"] }
num-format = { version = "0.4.4", optional = true }
once_cell = "1.19.0"
regex = "1.10.6"
serde_json = "1.0.125"
etcetera = "0.8.0"
table_formatter = "0.6.1"
clap-cargo = "0.18.1"

[dependencies.env_logger]
optional = true
features = []
version = "0.11.5"

[dependencies.hex]
optional = true
version = "0.4.3"

[dependencies.serde_cbor]
optional = true
version = "0.11.2"

[dependencies.serde_yaml]
optional = true
version = "0.9.34"

[dev-dependencies]
proptest = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.12.0"
git2 = { version = "0.19.0", default-features = false, features = [] }
